edited some spacing issues

--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,6 @@ nav .nav-item {
 	font-weight: 900;
 	font-size: 2rem;
 	text-align: center;
-	margin: 5% 0;
 	margin-top: 8rem;
 }
 .top-banner p {
@@ -161,8 +160,8 @@ nav .nav-item {
 }
 .top-banner article {
 	flex-wrap: wrap;
-	margin-top: 5%;
-	padding: 0 10%;
+	margin-top: 3%;
+	padding: 0 5%;
 }
 .top-banner h2 {
 	justify-content: flex-start;
@@ -350,7 +349,7 @@ nav .nav-item {
     padding-bottom: 8%;
 		font-size: 1.8rem;
 	}
-	
+
 }
 @media screen and (min-width: 800px) {
 	/* good & bad place */
